solc_ossfuzz_seed_corpus/test_sol/test_02ce7c46191b02f34d6cb1d243883293e7ce8a39dea66cb9cdc5f8499f2079b8_a138b34c147e7723d95baa63b6edcf74cb80d86d_sol.sol
==== Source:  ====

==== Source: su0.sol ====
bytes9 constant cons0 = bytes9(0x63451f2b192e66ed39);
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
library L0 {
  error er0();
  function f0() public   
  {
    unchecked {
      assert(false);
      uint216 l0 = (uint216((uint216(45778553830172719903072161989853137013180554859929402050742907376) / ((uint216(81495686607577389116203259670111485528016939386288582519379665323) - uint216(105312291668557186697918027683670432318895095400549111254310977535)) - uint216(95144713549210549693591055385959777962454684315969603688292299138)))) + uint216(105312291668557186697918027683670432318895095400549111254310977535));
      uint32[] memory l1 = new uint32[](5);
    }
    return;
  }
}
contract C0 {
  using L0 for *;
  uint8   s0 = uint8(0);
  bytes25   s1 = bytes25(0xb03dab777e1a9a3cd50b77a6aea9d8b89b331811d97680594a);
  int216 immutable public s2;
  constructor(int216 i0) payable  {
    s2 = int216(-15740617294348056177490329565721036571538467694144474042906122677);
    unchecked {
      {
        uint8  l0 = s0;
        uint8  l1 = l0;
        assert(l1 == s0);
        while (true)
        {
          revert L0.er0();
        }
        for(uint solinit0 = 0; solinit0 < (uint256(0) % 11); solinit0++)
        {
          revert L0.er0();
        }
      }
      s1 |= bytes25(0xffffffffffffffffffffffffffffffffffffffffffffffffff);
      for(;
;
)
      {
        string storage l2;
        s1 ^= bytes25(0xfd191e9ccaf53b78b50a3fda1f78f22d91f17fa860f0a87dbe);
      }
    }
  }
  using L0 for *;
  using L0 for *;
  using L0 for *;
}
pragma solidity >= 0.0.0;
// ----
// Warning 5740: (su1.sol:1100-1110): Unreachable code.
// Warning 2072: (su1.sol:101-111): Unused local variable.
// Warning 2072: (su1.sol:523-541): Unused local variable.
// Warning 5667: (su1.sol:766-775): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su1.sol:1274-1291): Unused local variable.
// Warning 2018: (su1.sol:30-582): Function state mutability can be restricted to pure
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
